--- a/src/components/pages/HeroPage.module.css
+++ b/src/components/pages/HeroPage.module.css
@@ -51,17 +51,41 @@
     transition: all 0.3s ease;
     backdrop-filter: blur(10px);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-left: 0;
+    height: 2rem;
+
 }
 
 .watchlistButton:hover {
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1));
-    border-color: #60a5fa;
+    border: 1px solid rgb(73, 71, 194);
     transform: translateY(-2px);
     box-shadow: 0 6px 12px rgba(96, 165, 250, 0.2);
 }
 
+.watchlistButton:focus {
+    outline: none;
+}
+
 .starIcon {
     color: #F59E0B;
+}
+
+.username {
+    display: flex;
+    align-items: center;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+    border-radius: 10px;
+    color: white;
+    font-size: 0.9rem;
+    font-weight: 600;
+    /* cursor: pointer; */
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    height: 2rem;
 }
 
 /* Background effects */
@@ -99,7 +123,76 @@
 .subtitle {
     font-size: 1.25rem;
     color: #9ca3af;
-    margin-bottom: 3rem;
+    margin-bottom: 0;
+    animation: fadeInUp 0.8s ease-out 0.2s backwards;
+}
+
+.loginButton {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
+    backdrop-filter: blur(10px);
+    color: white;
+    padding: 12px 24px;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    display: flex;
+    text-align: center;
+    animation: fadeInUp 0.8s ease-out 0.2s backwards;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+}
+
+.loginButton:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 0 10px 5px rgba(96, 165, 250, 0.2);
+    border: 1px solid rgb(73, 71, 194);
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1));
+}
+
+.loginButton:focus {
+    outline: none;
+}
+
+.logoutButton {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 0.4rem 0.8rem;
+    border-radius: 10px;
+    color: white;
+    font-size: 0.9rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    height: 2rem;
+}
+
+.logoutButton:hover {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1));
+    border: 1px solid rgb(73, 71, 194);
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(96, 165, 250, 0.2);
+}
+
+.logoutButton:focus {
+    outline: none;
+}
+
+.subtitleInstruction {
+    font-size: 1.25rem;
+    color: #9ca3af;
+    margin-bottom: 2rem;
+    margin-top: 0;
     animation: fadeInUp 0.8s ease-out 0.2s backwards;
 }
 
@@ -127,9 +220,9 @@
 
 .searchInput:focus {
     outline: none;
-    background-color: rgba(255, 255, 255, 0.15);
-    border-color: #60a5fa;
-    box-shadow: 0 0 0 4px rgba(96, 165, 250, 0.2);
+    border: 1px solid rgb(73, 71, 194);
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(96, 165, 250, 0.2);
 }
 
 .searchInput::placeholder {
