--- a/src/components/cards/FinancialTables.module.css
+++ b/src/components/cards/FinancialTables.module.css
@@ -75,10 +75,11 @@
 }
 
 .activeTab {
-    color: #60a5fa;
-    /* text-blue-400 */
-    border-bottom: 2px solid #60a5fa;
-    /* border-blue-400 */
+    border: 1px solid rgb(73, 71, 194);
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(96, 165, 250, 0.2);
+    color: rgb(73, 71, 194);
+
 }
 
 .inactiveTab {
@@ -111,6 +112,7 @@
     /* text-gray-400 */
     text-transform: uppercase;
     background-color: #374151;
+    text-align: center;
     /* bg-gray-700 */
 }
 
@@ -122,6 +124,29 @@
     padding-top: 0.5rem;
     /* py-2 */
     padding-bottom: 0.5rem;
+    border-radius: 0.5rem;
+    text-align: center;
+}
+
+.th:first-child,
+.td:first-child {
+    text-align: left;
+    width: 30%;
+}
+
+.iconButton {
+    background: none;
+    border: none;
+    color: #9ca3af;
+    cursor: pointer;
+}
+
+.iconButton:focus {
+    outline: none;
+}
+
+.iconButton:hover {
+    color: white;
 }
 
 .stickyHeader {
