--- a/src/components/cards/MoatCard.module.css
+++ b/src/components/cards/MoatCard.module.css
@@ -218,8 +218,16 @@
     /* Limit width */
 }
 
+.tickerInput:focus {
+    outline: none;
+    border: 1px solid rgb(73, 71, 194);
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(96, 165, 250, 0.2);
+
+}
+
 .addButton {
-    background-color: #3b82f6;
+    background-color: rgb(73, 71, 194);
     color: white;
     border: none;
     padding: 0.25rem 0.75rem;
