--- a/src/components/cards/OverviewCard.module.css
+++ b/src/components/cards/OverviewCard.module.css
@@ -433,13 +433,23 @@
 }
 
 .tfButton:hover {
-    color: #F3F4F6;
-    background-color: #374151;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1));
+    border: 1px solid rgb(73, 71, 194);
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(96, 165, 250, 0.2);
+}
+
+.tfButton:focus {
+    outline: none;
 }
 
 .activeTf {
-    background-color: #3B82F6;
-    color: white;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1));
+    border: 1px solid rgb(73, 71, 194);
+    transform: translateY(-2px);
+    box-shadow: 0 6px 12px rgba(96, 165, 250, 0.2);
+    color: #F3F4F6;
+    font-weight: 600;
 }
 
 .activeTf:hover {
