--- a/src/components/cards/GrowthCard.module.css
+++ b/src/components/cards/GrowthCard.module.css
@@ -78,7 +78,7 @@
 }
 
 .chartContainer {
-    height: 300px;
+    min-height: 300px;
     /* Smaller for mobile */
     width: 100%;
     margin-bottom: 2rem;
@@ -97,7 +97,7 @@
 
 @media (min-width: 768px) {
     .chartContainer {
-        height: 400px;
+        min-height: 400px;
     }
 }
 
