--- a/src/components/cards/OverviewCard.module.css
+++ b/src/components/cards/OverviewCard.module.css
@@ -73,6 +73,10 @@
     background-color: var(--glass-bg);
 }
 
+.watchlistBtn:focus {
+    outline: none;
+}
+
 .companyName {
     font-size: 2rem;
     font-weight: 700;
@@ -128,10 +132,11 @@
     gap: 0.25rem;
     background-color: var(--bg-primary);
     padding: 0.25rem 0.5rem;
-    border-radius: 9999px;
+    border-radius: 0.5rem;
     /* Pill shape */
     font-size: 0.75rem;
     border: 1px solid var(--border-color);
+    min-height: 1.5rem;
 }
 
 .badgeLabel {
@@ -153,18 +158,35 @@
     align-self: flex-start;
     background-color: var(--bg-primary);
     color: var(--text-primary);
-    padding: 0.5rem 1rem;
-    border-radius: 0.375rem;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.5rem;
     font-weight: 500;
     transition: background-color 0.2s;
     border: 1px solid var(--border-color);
     cursor: pointer;
+    /* min-height: 1.5rem; */
+
 }
 
 .viewDetailsBtn:hover {
     background-color: var(--text-secondary);
     color: var(--bg-primary);
 }
+
+.viewDetailsBtn:focus {
+    outline: none;
+}
+
+.iconButton {
+    /* Make the button much smaller and square */
+    /* width: 1.5rem;
+    height: 1.5rem; */
+    /* Ensure the icon is centered inside the button */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 /* Right: Score Section */
 .scoreSection {
@@ -350,22 +372,7 @@
     text-decoration: underline;
 }
 
-.iconButton {
-    /* Make the button much smaller and square */
-    width: 1.5rem;
-    height: 1.5rem;
-    padding: 0;
 
-    /* Ensure the icon is centered inside the button */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.viewDetailsBtn:hover {
-    background-color: var(--text-secondary);
-    /* Darker gray on hover */
-}
 
 .chevron {
     width: 0.8rem;
@@ -427,10 +434,10 @@
     color: var(--text-secondary);
     padding: 0.25rem 0.75rem;
     border-radius: 0.25rem;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     cursor: pointer;
     transition: all 0.2s;
-    height: 1rem;
+    height: 1.5rem;
     display: flex;
     align-items: center;
 }
@@ -478,7 +485,7 @@
     border: 1px solid var(--border-color);
     display: flex;
     flex-direction: column;
-    height: 300px;
+    min-height: 300px;
 }
 
 .chartContainer *:focus {
@@ -487,7 +494,7 @@
 
 @media (min-width: 768px) {
     .chartContainer {
-        height: 400px;
+        min-height: 400px;
     }
 }
 
