--- a/src/components/cards/ProfitabilityCard.module.css
+++ b/src/components/cards/ProfitabilityCard.module.css
@@ -84,7 +84,7 @@
 }
 
 .chartContainer {
-    height: 300px;
+    min-height: 300px;
     /* Smaller for mobile */
     width: 100%;
     margin-bottom: 2rem;
@@ -103,7 +103,7 @@
 
 @media (min-width: 768px) {
     .chartContainer {
-        height: 400px;
+        min-height: 400px;
     }
 }
 
